--- a/src/scss/components/_feedback.scss
+++ b/src/scss/components/_feedback.scss
@@ -38,9 +38,8 @@
     &::before {
       content: "";
       position: absolute;
-      top: 50%;
+      top: 0.5vw;
       left: 0;
-      transform: translateY(-50%);
       width: 0.5vw;
       height: 0.5vw;
       background-color: var(--red-color);
@@ -180,6 +179,7 @@
       font-size: 2.604vw;
       line-height: 3.906vw;
       &::before {
+        top: 1.3vw;
         width: 1.302vw;
         height: 1.302vw;
       }
@@ -224,6 +224,127 @@
         flex-shrink: 0;
         width: 9.635vw;
         height: 10.417vw;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .application {
+    margin-bottom: 18.667vw;
+
+    .title-page {
+      margin-bottom: 6.51vw;
+      span {
+        white-space: nowrap;
+      }
+    }
+
+    .feedback-title {
+      margin-bottom: 2.604vw;
+      font-size: 6.933vw;
+      line-height: 17.6vw;
+    }
+
+    .feedback-list {
+      gap: 4vw;
+      margin-bottom: 10.667vw;
+    }
+
+    .feedback-item {
+      padding-left: 5vw;
+      font-size: 4.8vw;
+      line-height: 6.933vw;
+      &::before {
+        top: 2.3vw;
+        width: 2.133vw;
+        height: 2.133vw;
+      }
+    }
+
+    .feedback-anim {
+      display: none;
+    }
+
+    .form {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .form__label {
+      svg {
+        left: 4vw;
+        width: 5.6vw;
+        height: 5.6vw;
+      }
+      &::after {
+        left: 13vw;
+      }
+    }
+
+    .form__input {
+      padding: 3.5vw 2.5vw 3.5vw 17vw;
+      border-radius: 1.333vw;
+      &::placeholder {
+        font-size: 4.267vw;
+        line-height: 7.467vw;
+      }
+    }
+
+    .custom-checkbox {
+      left: 0;
+
+      &__content {
+        display: block;
+        font-size: 3.733vw;
+        line-height: 5.867vw;
+        padding-left: 10vw;
+        br {
+          display: none;
+        }
+
+        &::before {
+          top: 0.156vw;
+          width: 6vw;
+          height: 6vw;
+          border-radius: 0.4vw;
+        }
+
+        &::after {
+          left: 1vw;
+          top: 1.2vw;
+          width: 4vw;
+          height: 4vw;
+          border-radius: 0.4vw;
+        }
+      }
+    }
+
+    .form-fields {
+      gap: 3.906vw;
+      width: 100%;
+    }
+
+    .file-area {
+      height: 70.933vw;
+
+      .file-dummy {
+        gap: 8vw;
+        padding: 5.333vw;
+        border-radius: 5.333vw;
+        background-image: url("../img/border2.svg");
+        background-size: 100%;
+
+        p {
+          max-width: 80%;
+          font-size: 4.267vw;
+          line-height: 4.8vw;
+        }
+      }
+
+      .file-icon {
+        width: 14.133vw;
+        height: 15.467vw;
       }
     }
   }
