--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -252,3 +252,160 @@
     }
   }
 }
+
+@include mobile {
+  .contacts {
+    gap: 9.115vw;
+    padding-top: 25vw;
+    margin-bottom: 13.333vw;
+  }
+
+  .contacts-container {
+    gap: 13.333vw;
+    width: 100%;
+  }
+
+  .contacts-items {
+    display: flex;
+    flex-direction: column;
+    column-gap: 0;
+    row-gap: 0;
+    gap: 8vw;
+  }
+  .contacts-item {
+    gap: 2.667vw;
+
+    &__title {
+      font-size: 6.933vw;
+      line-height: 6.933vw;
+    }
+
+    &__info {
+      gap: 3vw;
+      svg {
+        transform: translateY(0.4vw);
+        width: 6.4vw;
+        height: 6.4vw;
+      }
+      span {
+        font-size: 4.8vw;
+        line-height: 6.933vw;
+      }
+    }
+  }
+
+  .contacts-anim {
+    left: -73vw;
+    width: 586.667vw;
+    height: 50vw;
+  }
+
+  //contacts-feedback
+  .contacts-feedback {
+    margin-bottom: 18.667vw;
+    gap: 13.333vw;
+
+    .feedback {
+      padding: 0;
+    }
+
+    .feedback-title {
+      font-size: 6.933vw;
+      line-height: 8vw;
+      margin-bottom: 5.333vw;
+    }
+
+    .feedback-text {
+      font-size: 4.267vw;
+      line-height: 5.333vw;
+      margin-bottom: 8vw;
+    }
+
+    .form__label {
+      svg {
+        left: 4vw;
+        width: 5.6vw;
+        height: 5.6vw;
+      }
+      &::after {
+        left: 13vw;
+      }
+    }
+
+    .form__input {
+      padding: 3.5vw 2.5vw 3.5vw 17vw;
+      border-radius: 1.333vw;
+      &::placeholder {
+        font-size: 4.267vw;
+        line-height: 7.467vw;
+      }
+    }
+
+    .custom-checkbox {
+      left: 0;
+      margin: 0;
+
+      &__content {
+        display: block;
+        font-size: 3.733vw;
+        line-height: 5.867vw;
+        padding-left: 10vw;
+        br {
+          display: none;
+        }
+
+        &::before {
+          top: 0.156vw;
+          width: 6vw;
+          height: 6vw;
+          border-radius: 0.4vw;
+        }
+
+        &::after {
+          left: 1vw;
+          top: 1.2vw;
+          width: 4vw;
+          height: 4vw;
+          border-radius: 0.4vw;
+        }
+      }
+    }
+
+    .contacts-map {
+      gap: 6.667vw;
+    }
+
+    .contacts-map__title {
+      font-size: 6.933vw;
+      line-height: 6.933vw;
+    }
+
+    .contacts-map__link {
+      height: 65.6vw;
+      &::after {
+        left: 49.9vw;
+        top: 33vw;
+        width: 5.208vw;
+        height: 1.563vw;
+      }
+    }
+
+    .contacts-map__marker {
+      left: 49vw;
+      width: 6.933vw;
+      height: 10.4vw;
+    }
+
+    @keyframes contacts-marker {
+      0% {
+        top: 22vw;
+      }
+      50% {
+        top: 23vw;
+      }
+      100% {
+        top: 22vw;
+      }
+    }
+  }
+}
