Внес правки для всех страниц

--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -333,6 +333,7 @@
     }
 
     .form__input {
+      font-size: 4.267vw;
       padding: 3.5vw 2.5vw 3.5vw 17vw;
       border-radius: 1.333vw;
       &::placeholder {
