Адаптировал модальные окна, сжал изображения

--- a/src/scss/components/_feedback.scss
+++ b/src/scss/components/_feedback.scss
@@ -232,9 +232,8 @@
 @include mobile {
   .application {
     margin-bottom: 18.667vw;
-
-    .main-shadow::after {
-      display: none;
+    &::after {
+      top: 0;
     }
 
     .title-page {
